[gd_scene load_steps=23 format=2]

[ext_resource path="res://UI/UI Sprites/Flippo E-Reader/Flippo-Cover.png" type="Texture" id=1]
[ext_resource path="res://UI/UI Sprites/Flippo E-Reader/Pages/Start-up.png" type="Texture" id=2]
[ext_resource path="res://UI/UI Sprites/Flippo E-Reader/Pages/No-WiFi.png" type="Texture" id=3]
[ext_resource path="res://UI/UI Sprites/Flippo E-Reader/PutDownIcon/Put-Down-Hover.png" type="Texture" id=4]
[ext_resource path="res://UI/UI Sprites/Flippo E-Reader/PutDownIcon/Put-Down-Normal.png" type="Texture" id=5]
[ext_resource path="res://UI/UI Sprites/Flippo E-Reader/Pages/Blank-Page.png" type="Texture" id=6]
[ext_resource path="res://UI/UI Sprites/Flippo E-Reader/Pages/Menu.png" type="Texture" id=7]
[ext_resource path="res://UI/UI Sprites/Flippo E-Reader/Icons/NewsIcon.png" type="Texture" id=8]
[ext_resource path="res://UI/UI Sprites/Flippo E-Reader/Icons/Search.png" type="Texture" id=9]
[ext_resource path="res://UI/UI Sprites/Flippo E-Reader/Icons/Library.png" type="Texture" id=10]
[ext_resource path="res://UI/UI Sprites/Flippo E-Reader/Icons/Back.png" type="Texture" id=11]
[ext_resource path="res://UI/UI Scenes/Flippo E-Reader.gd" type="Script" id=12]
[ext_resource path="res://UI/UI Sprites/Flippo E-Reader/Pages/News/News-1.png" type="Texture" id=13]
[ext_resource path="res://UI/UI Sprites/Flippo E-Reader/Pages/News/News-3.png" type="Texture" id=14]
[ext_resource path="res://UI/UI Sprites/Flippo E-Reader/Pages/News/News-2.png" type="Texture" id=15]
[ext_resource path="res://UI/UI Sprites/Flippo E-Reader/Pages/Library.png" type="Texture" id=16]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/Creato/CreatoDisplay-Regular.otf"

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = SubResource( 1 )

[sub_resource type="Animation" id=6]
resource_name = "Hidden"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Case:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 640, 1000 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "HideEreader"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Case:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 640, 360 ), Vector2( 640, 1000 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Case:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 640, 360 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "ShowEreader"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Case:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 640, 1000 ), Vector2( 640, 360 ) ]
}

[node name="Flippo E-Reader" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 12 )

[node name="Visuals" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Case" type="Sprite" parent="Visuals"]
position = Vector2( 640, 1000 )
scale = Vector2( 1.442, 1.442 )
texture = ExtResource( 1 )

[node name="Blank-Page" type="Sprite" parent="Visuals/Case"]
position = Vector2( 0, -11.096 )
scale = Vector2( 0.499307, 0.499307 )
texture = ExtResource( 6 )

[node name="Start-up" type="Sprite" parent="Visuals/Case"]
position = Vector2( 0, -11.0957 )
scale = Vector2( 0.499307, 0.499307 )
texture = ExtResource( 2 )

[node name="No-WiFi" type="Sprite" parent="Visuals/Case"]
visible = false
position = Vector2( 0, -11.096 )
scale = Vector2( 0.499307, 0.499307 )
texture = ExtResource( 3 )

[node name="Menu" type="Sprite" parent="Visuals/Case"]
visible = false
position = Vector2( 0.693, -11.789 )
scale = Vector2( 0.499307, 0.499307 )
texture = ExtResource( 7 )

[node name="NewsTextureButton" type="TextureButton" parent="Visuals/Case/Menu"]
margin_left = -76.3888
margin_top = -254.167
margin_right = 73.6112
margin_bottom = -104.167
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )

[node name="NewsLabel" type="RichTextLabel" parent="Visuals/Case/Menu/NewsTextureButton"]
margin_left = 36.1111
margin_top = 122.222
margin_right = 114.111
margin_bottom = 155.222
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/bold_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center][b]News[/b][/center]"
text = "News"

[node name="LibraryTextureButton" type="TextureButton" parent="Visuals/Case/Menu"]
margin_left = -74.9999
margin_top = -87.5
margin_right = 75.0001
margin_bottom = 62.5
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )

[node name="LibraryLabel" type="RichTextLabel" parent="Visuals/Case/Menu/LibraryTextureButton"]
margin_left = 28.0
margin_top = 124.0
margin_right = 124.0
margin_bottom = 166.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/bold_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center][b]Library[/b][/center]"
text = "Library"

[node name="SearchTextureButton" type="TextureButton" parent="Visuals/Case/Menu"]
margin_left = -74.9999
margin_top = 72.2224
margin_right = 75.0001
margin_bottom = 222.222
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )

[node name="SearchLabel" type="RichTextLabel" parent="Visuals/Case/Menu/SearchTextureButton"]
margin_left = 26.3334
margin_top = 122.0
margin_right = 121.333
margin_bottom = 155.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/bold_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center][b]Search[/b][/center]"
text = "Search"

[node name="Library" type="Sprite" parent="Visuals/Case"]
visible = false
position = Vector2( 0, -11.096 )
scale = Vector2( 0.499307, 0.499307 )
texture = ExtResource( 16 )

[node name="News-1" type="Sprite" parent="Visuals/Case"]
visible = false
position = Vector2( 0.693, -11.096 )
scale = Vector2( 0.499307, 0.499307 )
texture = ExtResource( 13 )

[node name="News-2" type="Sprite" parent="Visuals/Case"]
visible = false
position = Vector2( 0.693, -11.096 )
scale = Vector2( 0.499307, 0.499307 )
texture = ExtResource( 15 )

[node name="News-3" type="Sprite" parent="Visuals/Case"]
visible = false
position = Vector2( 0.693, -11.096 )
scale = Vector2( 0.499307, 0.499307 )
texture = ExtResource( 14 )

[node name="BackTextureButton" type="TextureButton" parent="Visuals/Case"]
visible = false
margin_left = -94.3134
margin_top = -155.34
margin_right = -72.3134
margin_bottom = -133.34
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 11 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/Hidden = SubResource( 6 )
anims/HideEreader = SubResource( 3 )
anims/RESET = SubResource( 4 )
anims/ShowEreader = SubResource( 5 )

[node name="PutDownButton" type="TextureButton" parent="."]
margin_left = 1128.0
margin_right = 1278.0
margin_bottom = 150.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
